# MiniBit

./: .bazelrc  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  bazel_build_minibit.sh  dev.sh  dev_proxy.sh
.github/workflows/: rust.yml
config/: generate_all.sh
example_configs/: BUILD  boxing.yml  bridge.yml
example_configs/velocity/: minibit.yml  velocity.toml
k8s/: README.md  deploy.sh  kustomization.yaml  minibit-deployment.yaml  minibit-init-job.yaml  minibit-pvc.yaml  minibit-service.yaml  namespace.yaml  secret.yaml  values.yaml  velocity-config.yaml  velocity-deployment.yaml  velocity-service.yaml
run/boxmix12/: config.json  server.json
src/lib/: bench.rs  combat.rs  mod.rs  projectiles.rs  telemetry.rs
tools/profiling/: compose.yml  config.yml  profile.sh
velocity/: BUILD
