bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = [ "1.92.0" ],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

crate.annotation(
    crate = "valence_anvil",
    deps = [
        "@@rules_rust++crate+crates__bevy_app-0.14.2//:bevy_app",
        "@@rules_rust++crate+crates__bevy_ecs-0.14.2//:bevy_ecs",
        "@@rules_rust++crate+crates__valence_server-0.2.0-alpha.1-mc.1.20.1//:valence_server",
        "@@rules_rust++crate+crates__flume-0.11.1//:flume"
    ],
    proc_macro_deps = [
        "@@rules_rust++crate+crates__bevy_ecs_macros-0.14.2//:bevy_ecs_macros",
    ],
)

crate.annotation(
    crate = "valence_nbt",
    deps = ["@@rules_rust++crate+crates__serde-1.0.228//:serde"],
)

use_repo(crate, "crates")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
  name = "velocity",
  url = "https://api.papermc.io/v2/projects/velocity/versions/3.3.0-SNAPSHOT/builds/415/downloads/velocity-3.3.0-SNAPSHOT-415.jar",
  sha256 = "d7c47d3451f449210c0c0e6fa72bdbb3b48c18d79f5d4b4b77f8a546743619c5",
)
